--- a/teacherLogin.html
+++ b/teacherLogin.html
@@ -5,7 +5,7 @@
     <style type="text/css">
         .student_count,.income,.classroom{
     font-size: 20px;
-    
+
     width: 90%;
 	border: 1px solid white;
 	outline: none;
@@ -29,15 +29,15 @@
         <div class="student_count">
             <!-- <a href="">Register new student</a>-->
             <!--<button class="student_count_b">check student count</button>-->
-            <a href="studentCount.html">check student count</a>
+            <a href="studentCount2.php">check student count</a>
         </div>
         <div class="income">
             <!--<button class ="income_b">finance</button>-->
-            <a href="studentCount.html">finance</a>
+            <a href="teacherDetails.php">check for available class room</a>
         </div>
         <div class="classroom">
             <!--<button class="classroom_b">check for available class room</button>-->
-            <a href="studentCount.html">check for available class room</a>
+            <a href="addClass3.php">Add class</a>
         </div>
     </form>
     </body>
